# hello_conan_cmake_cpp23

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeUserPresets.json  DartConfiguration.tcl  README.md  build.sh  compile_commands.json  conanfile.py  run_app.sh  run_tests.sh  xa.sh  xapp.sh  xb.sh  xbuild.sh  xconfig.sh  xt.sh  xtests.sh
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  helpers.h  main.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  test_solution[1]_include.cmake  tests.cpp
